# bitmask-transmission-docker

./: .env.in  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  bitmask-root.patch  bitmask_init.py  docker-compose.open-transmission.yml  docker-compose.yml  entrypoint.sh  openvpn_generator.py  providers.json  pyproject.toml  run.sh  transmission.yaml  transmission_init.py
docker_bitmask/: Dockerfile  bitmask_init.py  entrypoint.sh  fix_requests.patch  openvpn_generator.py  ovpn_template.j2  resolve_spotty_dns.py  servers.txt  template_vpn.sh
docker_scripts/: bitmask-dev-requirements.txt  bitmask-root  bitmask_init.py  entrypoint.sh  openvpn_generator.py  ovpn_template.j2  resolve_spotty_dns.py  transmission.yaml  transmission_init.py
docker_transmission/: Dockerfile  assert_transmission_config.sh  transmission_settings.py
docker_transmission/crontabs/: transmission_settings
docker_transmission/custom-cont-init.d/: 10_assert_transmission_config.sh
open/: docker-compose.yml
scripts/: Dockerfile
tests/: test_openvpn_generator.py
