[tool.poetry]
name = "bitmask-transmission-docker"
version = "0.1.0"
description = ""
authors = ["Jon Wedaman <jweede@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.25.1"
PyYAML = "^5.4.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pytest = "^6.2.3"
pytest-xdist = "^2.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
