[tool.poetry]
name = "bitmask-transmission-docker"
version = "0.1.0"
description = ""
authors = ["Jon Wedaman <jweede@gmail.com>"]
readme = "README.md"
packages = [{include = "docker_scripts"}]

[tool.poetry.dependencies]
python = "^3.10"
jinja2 = "^3.1.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
pytest-xdist = "^3.1.0"
pytest-vcr = "^1.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
